# agent-failure-debugger

./: .gitignore  CHANGELOG.md  README.md  abstraction.py  advise.py  apply_fix.py  auto_apply.py  autofix.py  causal_resolver.py  config.py  decision_support.py  diagnose.py  evaluate_fix.py  execute_fix.py  explain.py  explainer.py  fix_templates.py  formatter.py  graph_loader.py  input.json  labels.py  main.py  pipeline.py  pipeline_post_apply.py  policy_loader.py  pyproject.toml  summarize.py  templates
.github/workflows/: ci.yml
docs/: quickstart.md  reference.md
examples/multi_run_stability/: README.md  expected_output.json  run_2.json  run_3.json  run_4.json  run_stability.py
examples/self_healing/: README.md  expected_output.json  self_healing_demo.py
examples/termination_divergence/: README.md  error_exit_run.json  expected_output.json  run_diff.py  silent_exit_run.json
src/agent_failure_debugger/: __init__.py  abstraction.py  auto_apply.py  autofix.py  config.py  decision_support.py  diagnose.py  evaluate_fix.py  execute_fix.py  execution_quality.py  explain.py  explainer.py  formatter.py  graph_loader.py  main.py  pipeline.py  pipeline_post_apply.py  pipeline_summary.py  policy_loader.py  reliability.py
src/agent_failure_debugger/integrations/: __init__.py  langgraph.py
templates/: system_prompt.txt
tests/: test_health_check_logic.py  test_langgraph_integration.py
